# fs3

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.json  makefile  storage.json
.claude/: settings.local.json
.github/workflows/: docker.yml  release.yml
docs/: MIGRATION.md
docs/changelog/: 2026-03-02_S3-compat.md
docs/fs3_lackof/: put_object_gap_vs_minio.md
docs/minio_actual/: inline_data.md  put_object_call_stack.md  storage_rest_remote_disk.md  two_phase_test_results.md
docs/minio_analysis/: 00_protocol_matrix.md  01_s3_and_sts.md  02_admin_observability_kms.md  03_file_transfer.md  04_identity_policy_integration.md  05_event_notification_protocols.md  06_internal_cluster_protocols.md  07_s3_http_https_all_interfaces_methods.md  08_s3_storage_backend_requirements.md  09_policy_engine.md  README.md
examples/: test_decode.rs
k8s-configmap-lib/: go.mod  main.go
src/: api.rs  config.rs  lib.rs  main.rs  s3.rs  server.rs
src/clis/: server.rs
src/components/: mod.rs  s3_handler.rs  storage_api_factory.rs  storage_policy.rs
src/legacy/: api.rs  config.rs  main.rs
src/mount/: localfs.rs
src/policy/: mod.rs  types.rs
src/storage/: configmap.rs  factory.rs  impl_configmap.rs  impl_memory.rs  impl_postgres.rs  impl_sqlite.rs  json.rs  memory.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
src/types/: errors.rs  mod.rs  storage_endpoint.rs
tests/: helpers.rs  minio_client.rs  minio_single_bucket.rs  minio_tests.rs  presign.rs  real_axum_handler.rs  signature.rs
tests/aws/: COVERAGE.md  accelerate.rs  analytics.rs  bucket.rs  bucket_config.rs  conditional.rs  cors.rs  cors_enforcement.rs  error_scenarios.rs  helpers.rs  inventory.rs  lifecycle_execution.rs  list_objects.rs  logging.rs  metrics_config.rs  mod.rs  multipart.rs  notifications.rs  object.rs  object_advanced.rs  object_features.rs  object_lock.rs  policy.rs  policy_advanced.rs  presigned.rs  replication_sync.rs  request_payment.rs  restore.rs  sse_kms.rs  sse_s3.rs  versioning.rs  versioning_enforcement.rs  website.rs
tests/boto3/: conftest.py  setup_venv.sh  test.py  test_abort_multipart.py  test_bucket.py  test_bucket_abac.py  test_bucket_accelerate.py  test_bucket_acl.py  test_bucket_analytics.py  test_bucket_cors.py  test_bucket_encryption.py  test_bucket_intelligent_tiering.py  test_bucket_inventory.py  test_bucket_lifecycle.py  test_bucket_location.py  test_bucket_logging.py  test_bucket_metadata_config.py  test_bucket_metadata_table.py  test_bucket_metrics.py  test_bucket_notification.py  test_bucket_ops.py  test_bucket_ownership_controls.py  test_bucket_policy.py  test_bucket_policy_status.py  test_bucket_replication.py  test_bucket_request_payment.py  test_bucket_tagging.py  test_bucket_versioning.py  test_bucket_website.py  test_copy_api.py  test_copy_object.py  test_delete_objects.py  test_file_transfer.py  test_fileobj_transfer.py  test_get_bucket_lifecycle_v1.py  test_head_bucket.py  test_head_object.py  test_legal_hold.py  test_list.py  test_list_directory_buckets.py  (+34 more)
tests/boto3_2tier/: client_helper.py  test_bucket_encryption.py  test_bucket_inventory.py  test_bucket_lifecycle.py  test_object_ops.py
tests/minio/: accelerate.rs  acl.rs  admin_bucket.rs  admin_config.rs  admin_heal.rs  admin_info.rs  admin_users.rs  analytics.rs  auth_v2.rs  auth_v4.rs  batch_version.rs  bitrot.rs  bucket.rs  bucket_config.rs  bucket_encryption.rs  bucket_lifecycle.rs  bucket_metadata.rs  bucket_notification.rs  bucket_replication.rs  bucket_tagging.rs  conditional.rs  (+59 more)
tools/: analyze_xlmeta.py
(+223 files in other folders)
