[package]
name = "s3_mount_gateway_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["policy", "multi-user"]
policy = []
multi-user = []
storage-k8sconfigmap = []
storage-sqlite = ["dep:sqlx"]
storage-postgres = ["dep:sqlx"]

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
md5 = "0.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]

[dev-dependencies]
minio = "0.3.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
