[package]
name = "s3_mount_gateway_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []

[dependencies]
anyhow = "1"
base64 = "0.22"
async-trait = "0.1.89"
axum = "0.8"
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = "1.124.0"
serde-xml-rs = "0.8.2"
quick-xml = { version = "0.36", features = ["serialize"] }
rmp = "0.8"
rmp-serde = "1.3"
reed-solomon-erasure = "6"
crc32fast = "1.4"
crc32c = "0.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
rmpv = "1.3.1"
highway = "1.3"

[build-dependencies]

[dev-dependencies]
minio = "0.3.0"
http = "1"
